[package]
name = "silver-lelantus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["lelantus", "privacy", "zero-knowledge", "cryptography"]
categories = ["cryptography"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
blake3.workspace = true
sha2.workspace = true
rand.workspace = true
rand_core.workspace = true
zeroize.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
hex.workspace = true

# Cryptography
pqcrypto-sphincsplus.workspace = true
pqcrypto-dilithium.workspace = true
pqcrypto-kyber.workspace = true
secp256k1.workspace = true
ed25519-dalek.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true

# Zero-Knowledge Proofs
merlin = "3.0"
curve25519-dalek = "4.1"

# Utilities
parking_lot.workspace = true
dashmap.workspace = true
crossbeam.workspace = true
rayon.workspace = true
lru.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "lelantus_benchmarks"
harness = false

[lib]
name = "silver_lelantus"
path = "src/lib.rs"
